db에서 장소 정보 전달 및 필터조건 적용된 장소 정보 전달 로직 구현(현재 db는 임의로 작성 및 저장)